// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandedButton /> attaches and calls onClick event handler 1`] = `
<button
  className="wrap"
  onClick={[MockFunction]}
>
  <span
    className="sign"
  >
    -
  </span>
  foo
</button>
`;

exports[`<ExpandedButton /> renders correctly 1`] = `
<button
  class="wrap"
>
  <span
    class="sign"
  >
    -
  </span>
  foo
</button>
`;

exports[`<ExpandedButton /> renders correctly 2`] = `
<button
  class="wrap"
>
  <span
    class="sign"
  >
    +
  </span>
  bar
</button>
`;
